<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="@dimen/pad_200"
              android:layout_height="wrap_content"
              android:background="@drawable/rectangle_gray_main_2_corner_12"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        style="@style/st_14_black_main_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_8"
        android:gravity="center_horizontal"
        android:text="@string/password_verification_description"
        />

    <ua.digma.sellerstime.ui.views.clearableedittext.ClearableEditText
        android:id="@+id/et_password"
        style="@style/st_14_black_main_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/pad_8"
        android:background="@drawable/rectangle_white_grey_border"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/pad_4"
        android:paddingLeft="@dimen/pad_8"
        android:paddingTop="@dimen/pad_4"/>
    <View
        android:layout_width="match_parent"
        android:background="@color/gray_main_2"
        android:layout_height="@dimen/pad_1"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_cancel"
            style="@style/st_14_blue_cloud_1"
            android:layout_width="@dimen/pad_0"
            android:layout_height="@dimen/pad_30"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"/>
        <View
            android:layout_width="@dimen/pad_1"
            android:background="@color/gray_main_2"
            android:layout_height="match_parent"></View>

        <TextView
            android:id="@+id/btn_ok"
            style="@style/st_14_blue_cloud_1"
            android:layout_width="@dimen/pad_0"
            android:layout_height="@dimen/pad_30"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/ok"/>

    </LinearLayout>
</LinearLayout>